[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
urls = { repository = "https://git01.iis.fhg.de/ks-ip-lib/software/pyjapi" }
name = "pyjapi"
description = "JAPI client"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["japi", "libjapi", "python", "click"]
dependencies = ['click>=8.0', 'strconv', 'python-dateutil']
dynamic = ["version"]

[tool.hatch.version]
path = "src/pyjapi/cli.py"


[tool.hatch.envs.docs]
dependencies = [
    'sphinx',
    'sphinx-autobuild',
    'sphinxcontrib-confluencebuilder', # git+https://github.com/sphinx-contrib/confluencebuilder.git
    'myst_parser',
    'furo',
    'sphinx-click',
    'sphinx-automodapi',
    'sphinx-autodoc-typehints',
    'sphinxcontrib-programoutput',
    'sphinxcontrib-images',
    'sphinxcontrib.apidoc',            # build apidocs during sphinx-build
    'sphinx-git',
    'jsonschema',                      # required by jsonschemaext.py
]
[tool.hatch.envs.docs.scripts]
html = "cd docs && make html"
live = "cd docs && make live"
uml = "cd docs && make uml"

[tool.hatch.envs.dev]
dependencies = [
    'pycodestyle',
    'black',
    'pylint',
    'flake8',
    'flake8-bandit',
    'pydocstyle',
    'coverage',
    'pytest',
    'pytest-cov',
    'nox',
]

[project.scripts]
japi = "pyjapi.cli:cli"
